ADD: splashscreen with capacitor

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -2,5 +2,13 @@
   "appId": "com.example.utangroulette",
   "appName": "UtangRoulette",
   "webDir": "build",
-  "bundledWebRuntime": false
+  "bundledWebRuntime": false,
+  "plugins": {
+    "SplashScreen": {
+      "launchAutoHide": false,
+      "showSpinner": true,
+      "splashFullScreen": true,
+      "splashImmersive": true
+    }
+  }
 }
