--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"@capacitor/android": "^7.2.0",
 		"@capacitor/cli": "^7.2.0",
 		"@capacitor/core": "^7.2.0",
+		"@capacitor/splash-screen": "^7.0.1",
 		"@sveltejs/adapter-static": "^3.0.8"
 	}
 }
